--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -60,7 +60,7 @@
 
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/login3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="70dp"
