zyj 2nd 今日课程主界面

--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -1,9 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CourseActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title1"
+            android:layout_marginTop="20dp"
+            android:text="今日课程"
+            android:textSize="70dp"
+            android:layout_gravity="center" >
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="------------------------------------------------------------------------------------------------------------">
+
+        </TextView>
+
+        <Button
+            android:id="@+id/course1"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:text="课程1"
+            android:textSize="40dp"
+            app:backgroundTint="#CCCCFF">
+
+        </Button>
+        <Button
+            android:id="@+id/course2"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:text="课程2"
+            android:textSize="40dp"
+            app:backgroundTint="#CCCCFF">
+
+        </Button>
+
+        <Button
+            android:id="@+id/course3"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:text="课程3"
+            android:textSize="40dp"
+            app:backgroundTint="#CCCCFF">
+
+        </Button>
+
+        <Button
+            android:id="@+id/courseTableCheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:layout_marginLeft="170dp"
+            android:text="查看课程表"
+            android:textSize="33dp"
+            android:textColor="#AB82FF"
+            app:backgroundTint="@color/white">
+        </Button>
+
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="130dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radioButton1"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:text="课程"
+                android:textSize="20dp"
+                tools:layout_editor_absoluteX="20dp"
+                tools:layout_editor_absoluteY="611dp" />
+
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="待办"
+                android:textSize="20dp"
+                tools:layout_editor_absoluteX="141dp"
+                tools:layout_editor_absoluteY="611dp" />
+
+            <RadioButton
+                android:id="@+id/radioButton3"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="20dp"
+                android:text="我"
+                android:textSize="20dp"
+                tools:layout_editor_absoluteX="281dp"
+                tools:layout_editor_absoluteY="611dp" />
+        </RadioGroup>
+    </LinearLayout>
+
+</LinearLayout>
