--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -11,15 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/title1"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="今日课程"
-            android:textSize="70dp"
-            android:layout_gravity="center" >
-        </TextView>
+            android:textSize="70dp"></TextView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,19 +32,24 @@
             android:id="@+id/course1"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="#CCCCFF"
+            android:gravity="center"
             android:text="课程1"
             android:textSize="40dp"
             app:backgroundTint="#CCCCFF">
 
         </Button>
+
         <Button
             android:id="@+id/course2"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="#CCCCFF"
+            android:gravity="center"
             android:text="课程2"
             android:textSize="40dp"
             app:backgroundTint="#CCCCFF">
@@ -55,8 +60,10 @@
             android:id="@+id/course3"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="#CCCCFF"
+            android:gravity="center"
             android:text="课程3"
             android:textSize="40dp"
             app:backgroundTint="#CCCCFF">
@@ -67,54 +74,107 @@
             android:id="@+id/courseTableCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
             android:layout_marginLeft="170dp"
+            android:layout_marginTop="70dp"
+            android:backgroundTint="@color/white"
             android:text="查看课程表"
-            android:textSize="33dp"
             android:textColor="#AB82FF"
-            app:backgroundTint="@color/white">
+            android:textSize="33dp">
+
         </Button>
 
 
-        <RadioGroup
+        <LinearLayout
+            android:id="@+id/main_bottom"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_alignParentBottom="true"
+            android:layout_height="52dp"
             android:layout_marginTop="130dp"
+            android:background="@color/white"
+            android:gravity="bottom|center|center_horizontal"
             android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/radioButton1"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:text="课程"
-                android:textSize="20dp"
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="611dp" />
+            <LinearLayout
+                android:id="@+id/main_tab_course_course"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButton2"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="待办"
-                android:textSize="20dp"
-                tools:layout_editor_absoluteX="141dp"
-                tools:layout_editor_absoluteY="611dp" />
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/course_nomal" />
 
-            <RadioButton
-                android:id="@+id/radioButton3"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="20dp"
-                android:text="我"
-                android:textSize="20dp"
-                tools:layout_editor_absoluteX="281dp"
-                tools:layout_editor_absoluteY="611dp" />
-        </RadioGroup>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="课程"
+                    android:textColor="#8b8b8b"
+                    android:textSize="12sp" />
+
+                <!--
+                     <Button
+                    android:id="@+id/btn_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/khc"
+                    android:drawableTop="@drawable/course_nomal"
+
+                    android:paddingBottom="2dip"
+                    android:paddingTop="7dip"
+                    android:scaleType="matrix"
+                    android:text="@string/main_tab_course"
+                    android:textColor="@drawable/tab_textcolor"
+                    android:textSize="12sp" />
+                -->
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/main_tab_course_find"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/find_nomal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="待办"
+                    android:textColor="#8b8b8b"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/main_tab_course_mine"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/home_pressed" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="我"
+                    android:textColor="#8b8b8b"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
