--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -165,7 +165,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/home_pressed" />
+                    android:background="@drawable/mine_nomal" />
 
                 <TextView
                     android:layout_width="wrap_content"
