--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="今日课程"
-            android:textSize="70dp"></TextView>
+            android:textSize="70dp" />
 
         <TextView
             android:layout_width="wrap_content"
