--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -60,7 +60,6 @@
             android:text="昵称修改"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:visibility=""
             app:backgroundTint="#FFFFFF" />
 
         <TextView
@@ -83,7 +82,7 @@
             android:text="设置"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:visibility=""
+
             app:backgroundTint="#FFFFFF" />
 
         <TextView
@@ -93,4 +92,7 @@
             android:layout_height="2dp"
             android:layout_gravity="center_horizontal"
             android:background="@color/black" />
+    </LinearLayout>
 
+
+</LinearLayout>
