--- a/app/src/main/res/layout/activity_cs_table.xml
+++ b/app/src/main/res/layout/activity_cs_table.xml
@@ -15,8 +15,7 @@
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="" />
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +29,7 @@
             android:background="#EEEEEE">
 
             <ImageView
+                android:id='@+id/table_back'
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginLeft="20dp"
@@ -50,7 +50,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="#7fab96c5">
+            android:background="#CCCCFF">
 
             <TextView
                 android:layout_width="110px"
