--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".FirstActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,14 +34,13 @@
             android:layout_marginLeft="30sp"
             android:layout_marginTop="40dp"
             android:layout_marginRight="30sp"
-            android:background="#CCCCFF"
+            android:background="@color/purple_400"
             android:padding="10dp"
             android:text="账号密码登录"
             android:textColor="@android:color/white"
             android:textSize="30sp"
-            android:text_gravity="center"
             android:visibility="visible"
-            app:backgroundTint="#CCCCFF"/>
+            app:backgroundTint="@color/purple_400"/>
 
         <Button
             android:id="@+id/logIn2"
@@ -51,13 +50,13 @@
             android:layout_marginLeft="30sp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="30sp"
-            android:background="#CCCCFF"
+            android:background="@color/purple_400"
             android:padding="10dp"
             android:text="手机号登录"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:visibility="visible"
-            app:backgroundTint="#CCCCFF"/>
+            app:backgroundTint="@color/purple_400"/>
 
     </RelativeLayout>
 
