--- a/app/src/main/res/layout/activity_cs_content.xml
+++ b/app/src/main/res/layout/activity_cs_content.xml
@@ -1,9 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CsContentActivity">
+    android:orientation="vertical"
+    tools:context=".MessageLogInActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#EEEEEE"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id='@+id/cs_content_back'
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/base_action_back"
+                android:backgroundTint="@color/black" />
+
+            <TextView
+                android:id="@+id/title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="100dp"
+                android:text="课程内容"
+                android:textSize="30dp" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="150dp"
+            android:background="@color/purple_300"
+            app:backgroundTint="@color/purple_300">
+
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="20dp"
+                android:padding="8sp"
+                android:background="@color/purple_400"
+                android:gravity=""
+                android:text="软件工程实践"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                android:textStyle="bold">
+
+            </TextView>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="35dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:id="@+id/t_cs_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginRight="25dp"
+                    android:text=
+                    "课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......课程内容......课程内容......
+                    课程内容......课程内容......"
+                    android:textColor="@color/black"
+                    android:textSize="20sp">
+
+                </TextView>
+
+            </ScrollView>
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/edit2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="600dp"
+            android:layout_marginRight="130dp"
+            android:background="#FFBB86"
+            android:padding="5dp"
+            android:text="编辑"
+            android:textColor="@android:color/white"
+            android:textSize="28sp"
+            android:visibility="visible"
+            app:backgroundTint="@color/purple_200" />
+
+    </RelativeLayout>
+
+</LinearLayout>
