--- a/app/src/main/res/layout/activity_jitang.xml
+++ b/app/src/main/res/layout/activity_jitang.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="70dp"
             android:layout_marginRight="40dp"
             android:layout_marginBottom="170dp"
+            app:backgroundTint="@color/purple_300"
             android:background="@color/purple_300">
 
             <TextView
@@ -52,6 +53,7 @@
                 android:layout_marginTop="120dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="35dp"
+                app:backgroundTint="@color/purple_400"
                 android:background="@color/purple_400">
 
                 <TextView
@@ -75,9 +77,9 @@
             android:id="@+id/receive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="90dp"
             android:layout_marginTop="590dp"
-            android:layout_marginRight="80dp"
+            android:layout_marginRight="90dp"
             android:background="#FFBB86"
             android:padding="9dp"
             android:text="收到"
