wyy 9th 课程内容图片添加和一些跳转

--- a/app/src/main/res/layout/activity_jitang.xml
+++ b/app/src/main/res/layout/activity_jitang.xml
@@ -56,7 +56,7 @@
                 app:backgroundTint="@color/purple_400"
                 android:background="@color/purple_400">
 
-                <TextView
+                <EditText
                     android:id="@+id/t_jiTang"
                     android:layout_width="284dp"
                     android:layout_height="336dp"
@@ -67,7 +67,7 @@
                     android:textColor="@color/black"
                     android:textSize="35sp">
 
-                </TextView>
+                </EditText>
 
             </RelativeLayout>
 
